Добавлен механизм прав доступа, реализовано автоматическое сканирование, поиск и создание прав доступа в указанных пакетах