@@ -1,18 +1,22 @@
 package me.stinper.jwtauth.service.entity;
 
 import me.stinper.jwtauth.dto.EntityPaginationRequest;
+import me.stinper.jwtauth.dto.permission.PermissionDto;
 import me.stinper.jwtauth.dto.role.RoleCreationRequest;
 import me.stinper.jwtauth.dto.role.RoleDto;
+import me.stinper.jwtauth.dto.role.RolePermissionUpdateRequest;
+import me.stinper.jwtauth.entity.Permission;
 import me.stinper.jwtauth.entity.Role;
 import me.stinper.jwtauth.exception.EntityValidationException;
 import me.stinper.jwtauth.exception.NoSuchPropertyException;
 import me.stinper.jwtauth.exception.RelatedEntityExistsException;
+import me.stinper.jwtauth.exception.ResourceNotFoundException;
 import me.stinper.jwtauth.mapping.RoleMapper;
+import me.stinper.jwtauth.repository.PermissionRepository;
 import me.stinper.jwtauth.repository.RoleRepository;
 import me.stinper.jwtauth.repository.UserRepository;
-import me.stinper.jwtauth.service.entity.RoleServiceImpl;
+import me.stinper.jwtauth.utils.MessageSourceHelper;
 import me.stinper.jwtauth.validation.RoleCreationValidator;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -29,6 +33,7 @@ import org.springframework.validation.SimpleErrors;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -38,8 +43,10 @@ import static org.mockito.Mockito.*;
 class RoleServiceImplUnitTest {
     @Mock private RoleRepository roleRepository;
     @Mock private UserRepository userRepository;
+    @Mock private PermissionRepository permissionRepository;
     @Mock private RoleMapper roleMapper;
     @Mock private RoleCreationValidator roleCreationValidator;
+    @Mock private MessageSourceHelper messageSourceHelper;
 
     @InjectMocks
     private RoleServiceImpl roleService;
@@ -67,7 +74,7 @@ class RoleServiceImplUnitTest {
 
         when(roleRepository.findAll(testData.NO_SORT_PAGINATION_REQUEST)).thenReturn(
                 new PageImpl<>(
-                        testData.ADMIN_MANAGER_USER_ROLES_LIST,
+                        List.of(testData.ADMIN_ROLE, testData.MANAGER_ROLE, testData.USER_ROLE),
                         testData.NO_SORT_PAGINATION_REQUEST,
                         3
                 )
@@ -77,7 +84,9 @@ class RoleServiceImplUnitTest {
         Page<RoleDto> roles = roleService.findAll(testData.NO_SORT_PAGINATION_REQUEST);
 
         //THEN
-        assertThat(roles).hasSize(3).containsAll(testData.ADMIN_MANAGER_USER_ROLE_DTO_LIST);
+        assertThat(roles).hasSize(3).containsAll(
+                List.of(testData.ADMIN_ROLE_DTO, testData.MANAGER_ROLE_DTO, testData.USER_ROLE_DTO)
+        );
 
         verify(roleRepository, times(1)).findAll(testData.NO_SORT_PAGINATION_REQUEST);
     }
@@ -161,15 +170,14 @@ class RoleServiceImplUnitTest {
         //GIVEN
         final String roleName = testData.ADMIN_ROLE.getRoleName();
 
-        RoleCreationRequest roleCreationRequest = new RoleCreationRequest(roleName);
-        Role adminRoleWithoutId = Role.builder()
-                .roleName(roleName)
-                .build();
+        RoleCreationRequest roleCreationRequest = new RoleCreationRequest(
+                roleName, "Администратор", Set.of("some.admin.permission", "some.another.admin.permission")
+        );
 
-        when(roleMapper.toRole(roleCreationRequest)).thenReturn(adminRoleWithoutId);
+        when(roleMapper.toRole(roleCreationRequest)).thenReturn(Role.builder().build());
         when(roleMapper.toRoleDto(testData.ADMIN_ROLE)).thenReturn(testData.ADMIN_ROLE_DTO);
 
-        when(roleRepository.save(adminRoleWithoutId)).thenReturn(testData.ADMIN_ROLE);
+        when(roleRepository.save(any())).thenReturn(testData.ADMIN_ROLE);
         when(roleCreationValidator.validateObject(roleCreationRequest)).thenReturn(new SimpleErrors(roleCreationRequest));
 
         //WHEN
@@ -178,7 +186,113 @@ class RoleServiceImplUnitTest {
         //THEN
         assertThat(roleDto).isEqualTo(testData.ADMIN_ROLE_DTO);
 
-        verify(roleRepository, times(1)).save(adminRoleWithoutId);
+        verify(roleRepository).save(any());
+    }
+
+
+    @Test
+    void updatePermissions_whenRoleNotFound_thenThrowsException() {
+        //GIVEN
+        final String roleName = "ROLE_USER", errorMessage = "Error Message";
+        when(roleRepository.findByRoleNameIgnoreCase(roleName)).thenReturn(Optional.empty());
+        when(messageSourceHelper.getLocalizedMessage(any(), any())).thenReturn(errorMessage);
+
+        //WHEN & THEN
+        assertThatExceptionOfType(ResourceNotFoundException.class)
+                .isThrownBy(() -> roleService.updatePermissions(roleName, mock(RolePermissionUpdateRequest.class)))
+                .satisfies(ex -> assertThat(ex.getLocalizedMessage()).isEqualTo(errorMessage));
+
+        verify(roleRepository).findByRoleNameIgnoreCase(roleName);
+        verify(messageSourceHelper).getLocalizedMessage(any(), any());
+
+        verifyNoMoreInteractions(roleRepository);
+        verifyNoInteractions(permissionRepository, roleCreationValidator, roleMapper);
+    }
+
+
+    @Test
+    void updatePermissions_whenRolePermissionsUpdateRequestValidationFails_thenThrowsException() {
+        //GIVEN
+        final String roleName = "ROLE_ADMIN";
+
+        final RolePermissionUpdateRequest request = new RolePermissionUpdateRequest(
+                Set.of("some.incorrect.permission")
+        );
+
+        when(roleRepository.findByRoleNameIgnoreCase(roleName)).thenReturn(Optional.of(testData.ADMIN_ROLE));
+
+        doAnswer(ans -> {
+            Errors errors = ans.getArgument(1, Errors.class);
+            errors.rejectValue("permissions", "error.code", "Error Message");
+
+            return null;
+        }).when(roleCreationValidator).validateInputPermissions(eq(request.permissions()), any());
+
+        //WHEN & THEN
+        assertThatExceptionOfType(EntityValidationException.class)
+                .isThrownBy(() -> roleService.updatePermissions(roleName, request))
+                .satisfies(ex -> assertThat(ex.getFieldErrors())
+                        .hasSize(1)
+                        .first()
+                        .satisfies(error -> {
+                            assertThat(error.getField()).isEqualTo("permissions");
+                            assertThat(error.getDefaultMessage()).isEqualTo("Error Message");
+                            assertThat(error.getCode()).isEqualTo("error.code");
+                        }));
+
+        verify(roleRepository).findByRoleNameIgnoreCase(roleName);
+        verify(roleCreationValidator).validateInputPermissions(eq(request.permissions()), any());
+
+        verifyNoMoreInteractions(roleRepository);
+        verifyNoInteractions(messageSourceHelper, roleMapper);
+    }
+
+
+    @Test
+    void updatePermissions_whenRolePermissionsUpdateRequestIsValid_thenUpdatesRolePermissions() {
+        //GIVEN
+        final String roleName = "ROLE_ADMIN";
+
+        final RolePermissionUpdateRequest request = new RolePermissionUpdateRequest(
+                Set.of("some.permission")
+        );
+
+        final Role existingRole = new Role(1L, roleName, "Администратор", Collections.emptyList());
+        final Role updatedRole = new Role(1L, roleName, "Администратор",
+                List.of(
+                        new Permission(1L, "some.permission", null)
+                )
+        );
+
+        final RoleDto updatedRoleDto = new RoleDto(1L, roleName, "Администратор",
+                List.of(
+                        new PermissionDto(1L, "some.permission", null)
+                )
+        );
+
+        when(roleRepository.findByRoleNameIgnoreCase(roleName)).thenReturn(Optional.of(existingRole));
+        when(permissionRepository.findAllByPermissionIn(request.permissions()))
+                .thenReturn(
+                        List.of(
+                                new Permission(10L, "some.permission", null)
+                        )
+                );
+        when(roleRepository.save(existingRole)).thenReturn(updatedRole);
+        when(roleMapper.toRoleDto(updatedRole)).thenReturn(updatedRoleDto);
+        doNothing().when(roleCreationValidator).validateInputPermissions(eq(request.permissions()), any(Errors.class));
+
+
+        //WHEN
+        RoleDto result = roleService.updatePermissions(roleName, request);
+
+        //THEN
+        assertThat(result).isEqualTo(updatedRoleDto);
+        verify(roleRepository).findByRoleNameIgnoreCase(roleName);
+        verify(roleCreationValidator).validateInputPermissions(eq(request.permissions()), any(Errors.class));
+        verify(permissionRepository).findAllByPermissionIn(request.permissions());
+        verify(roleRepository).save(existingRole);
+
+        verifyNoInteractions(messageSourceHelper);
     }
 
 
@@ -190,7 +304,9 @@ class RoleServiceImplUnitTest {
     )
     void create_whenRoleCreationRequestNotValid_thenThrowsException() {
         //GIVEN
-        RoleCreationRequest invalidRoleCreationRequest = new RoleCreationRequest("INVALID");
+        RoleCreationRequest invalidRoleCreationRequest = new RoleCreationRequest(
+                "INVALID", "Prefix", Collections.emptySet()
+        );
 
         Errors roleCreationRequestErrors = new SimpleErrors(invalidRoleCreationRequest);
         roleCreationRequestErrors.rejectValue("roleName", "code");
@@ -198,7 +314,8 @@ class RoleServiceImplUnitTest {
         when(roleCreationValidator.validateObject(invalidRoleCreationRequest)).thenReturn(roleCreationRequestErrors);
 
         //WHEN & THEN
-        Assertions.assertThrows(EntityValidationException.class, () -> roleService.create(invalidRoleCreationRequest));
+        assertThatExceptionOfType(EntityValidationException.class)
+                .isThrownBy(() -> roleService.create(invalidRoleCreationRequest));
 
         verify(roleRepository, never()).save(any());
     }
@@ -241,21 +358,20 @@ class RoleServiceImplUnitTest {
                 .thenReturn(true); // Related entities found
 
         //WHEN & THEN
-        Assertions.assertThrows(RelatedEntityExistsException.class, () -> roleService.delete(roleName));
+        assertThatExceptionOfType(RelatedEntityExistsException.class)
+                .isThrownBy(() -> roleService.delete(roleName));
 
         verify(roleRepository, never()).deleteByRoleNameIgnoreCase(roleName);
     }
 
     private static class TestData {
-        final Role ADMIN_ROLE = new Role(1L, "ROLE_ADMIN");
-        final Role MANAGER_ROLE = new Role(2L, "ROLE_MANAGER");
-        final Role USER_ROLE = new Role(3L, "ROLE_USER");
-        final List<Role> ADMIN_MANAGER_USER_ROLES_LIST = List.of(ADMIN_ROLE, MANAGER_ROLE, USER_ROLE);
+        final Role ADMIN_ROLE = new Role(1L, "ROLE_ADMIN", "Администратор", Collections.emptyList());
+        final Role MANAGER_ROLE = new Role(2L, "ROLE_MANAGER", "Менеджер", Collections.emptyList());
+        final Role USER_ROLE = new Role(3L, "ROLE_USER", "Пользователь", Collections.emptyList());
 
-        final RoleDto ADMIN_ROLE_DTO = new RoleDto(1L, "ROLE_ADMIN");
-        final RoleDto MANAGER_ROLE_DTO = new RoleDto(2L, "ROLE_MANAGER");
-        final RoleDto USER_ROLE_DTO = new RoleDto(3L, "ROLE_USER");
-        final List<RoleDto> ADMIN_MANAGER_USER_ROLE_DTO_LIST = List.of(ADMIN_ROLE_DTO, MANAGER_ROLE_DTO, USER_ROLE_DTO);
+        final RoleDto ADMIN_ROLE_DTO = new RoleDto(1L, "ROLE_ADMIN", "Администратор", Collections.emptyList());
+        final RoleDto MANAGER_ROLE_DTO = new RoleDto(2L, "ROLE_MANAGER", "Менеджер", Collections.emptyList());
+        final RoleDto USER_ROLE_DTO = new RoleDto(3L, "ROLE_USER", "Пользователь", Collections.emptyList());
 
         final Pageable NO_SORT_PAGINATION_REQUEST =
                 new EntityPaginationRequest(0, 10, null, null).buildPageableFromRequest();
